--- a/site/common/screen.css
+++ b/site/common/screen.css
@@ -1,29 +1,34 @@
+/*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+*,::after,::before{box-sizing:border-box}html{-moz-tab-size:4;tab-size:4}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}hr{height:0;color:inherit}abbr[title]{text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}table{text-indent:0;border-color:inherit}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}::-moz-focus-inner{border-style:none;padding:0}:-moz-focusring{outline:1px dotted ButtonText}:-moz-ui-invalid{box-shadow:none}legend{padding:0}progress{vertical-align:baseline}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}
+
 body {
- color: #333;
- margin: 0px;
- margin-bottom: 20px;
- background-image: url(monkey.png);
- background-position: bottom left;
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-color: #eee;
+  min-height: 100vh;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+
+  color: #333;
+  margin: 0px;
+  margin-bottom: 20px;
+  background-image: url(monkey.png);
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #eee;
 }
 
 h1 {
  font-weight: normal;
- font-family: helvetica;
  text-align: right;
 }
 
 h2 {
  clear: both;
- font-family: helvetica;
 }
 
 h3 {
  margin-top: 0px;
  margin-bottom: 5px;
- font-family: helvetica;
 }
 
 p {
@@ -34,7 +39,6 @@ p {
 
 div {
  clear: both;
- font-family: georgia;
 }
 
 a img {
@@ -99,53 +103,77 @@ form {
  background-color: inherit;
 }
 
-#sidebar {
- color: inherit;
- width: 130px;
- padding: 5px;
- padding-top: 25px;
-
- position: absolute;
- left: 0px;
- right: auto;
- top: 0px;
-
- text-align: right;
-
- min-height: 100%;
-
- font-family: helvetica;
+.left-sidebar-grid {
+  display: grid;
+  grid-template-areas:
+    'header'
+    'main-content'
+    'left-sidebar'
+    'footer';
 }
 
-#sidebar div, #sidebar form {
+/* general column padding */
+.left-sidebar-grid > * {
+  padding: 1rem;
+}
+
+/* assign columns to grid areas */
+.left-sidebar-grid > .header {
+  grid-area:header;
+}
+.left-sidebar-grid > .main-content {
+  grid-area:main-content;
+}
+.left-sidebar-grid > .left-sidebar {
+  grid-area:left-sidebar;
+}
+.left-sidebar-grid > .right-sidebar {
+  grid-area:right-sidebar;
+}
+.left-sidebar-grid > .footer {
+  grid-area:footer;
+}
+
+/* tablet breakpoint */
+@media (min-width:768px) {
+  .left-sidebar-grid {
+    grid-template-columns: max-content 1fr;
+    grid-template-areas:
+      'header header'
+      'left-sidebar main-content'
+      'footer footer';
+  }
+}
+
+.left-sidebar {
+ text-align: right;
+}
+
+.left-sidebar div, .left-sidebar form {
  margin-bottom: 20px;
 }
 
-#sidebar ul {
+.left-sidebar ul {
  list-style: none;
  margin: 0px;
  padding: 0px;
 
  margin-bottom: 20px;
 }
-#sidebar li {
- margin: 0px;
- display: inline;
-}
 
-#sidebar a {
+.left-sidebar a {
  display: block;
- margin-bottom: 1px;
- padding-right: 6px;
+ margin-bottom: 0.1em;
+ padding-right: 0.5ch;
  text-decoration: none;
  border-bottom: 1px solid #66c;
 }
 
-#sidebar a:visited {
+.left-sidebar a:visited {
  border-bottom: 1px solid #c6c;
 }
 
-#sidebar a:hover {
+.left-sidebar a:hover {
  color: #6c6;
  border-bottom: 1px solid #6c6;
 }
@@ -166,7 +194,7 @@ form {
 }
 
 #search input[type="text"] {
-  width: 80px;
+  width: 100%;
 }
 
 /* suppress bottom border triggered by title="" attribute */
@@ -174,42 +202,43 @@ form {
  border-bottom: none;
 }
 
-#content {
- margin-left: 150px;
- margin-right: auto;
- padding-right: 10px;
- max-width: 640px;
+.main-content {
+ padding-right: 1ch;
+ max-width: 80ch;
 }
 
-#content > div {
+.main-content > div {
  padding: 1em;
  margin-top: 1em;
  border-bottom: 2px solid #bbb;
  margin-bottom: 1em;
 }
 
-#content > p {
+.main-content > p {
  margin-top: 1em;
 }
 
-#content > div img {
+.main-content > div img {
  float: left;
  padding-right: 1em;
 }
 
-#content .details {
+.main-content .entry > p {
+  font-family: georgia;
+}
+
+.main-content .details {
  text-align: right;
  margin-top: 0.5em;
  margin-right: 1em;
  font-size: smaller;
- font-family: helvetica;
 }
 
-#content .details a {
+.main-content .details a {
  text-decoration: none;
 }
 
-#content .details a {
+.main-content .details a {
  white-space: nowrap;
 }
 
@@ -232,7 +261,7 @@ form {
    display: none;
   }
 
-  #content > div img {
+  .main-content > div img {
    float: left;
    padding-right: 1em;
   }
