--- a/ui/entry.twig
+++ b/ui/entry.twig
@@ -11,7 +11,7 @@
 {% endmacro %}
 
 {% import _self as blog %}
-<div id="n {{ entry.id }} {% for tag in entry.tags %}{{ tag }} {% endfor %}">
+<div class="entry" id="n {{ entry.id }} {% for tag in entry.tags %}{{ tag }} {% endfor %}">
   {% if entry.title %}
     <h3>{{ entry.title }}</h3>
   {% endif %}
