--- a/site/common/screen.css
+++ b/site/common/screen.css
@@ -2,10 +2,33 @@
 *,::after,::before{box-sizing:border-box}html{-moz-tab-size:4;tab-size:4}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}hr{height:0;color:inherit}abbr[title]{text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}table{text-indent:0;border-color:inherit}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}::-moz-focus-inner{border-style:none;padding:0}:-moz-focusring{outline:1px dotted ButtonText}:-moz-ui-invalid{box-shadow:none}legend{padding:0}progress{vertical-align:baseline}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}
 
 :root {
- /* https://modernfontstacks.com: Antique but just Georgia */
- --serif: 'Georgia Pro', Georgia, serif;
- /* https://modernfontstacks.com: Neo-Grotesque */
- --sans-serif: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+  /* https://modernfontstacks.com: Antique but just Georgia */
+  --serif: 'Georgia Pro', Georgia, serif;
+  /* https://modernfontstacks.com: Neo-Grotesque */
+  --sans-serif: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+
+  --text-color: #333;
+  --background-color: #eee;
+
+  --primary-color: #666;
+  --primary-color-r: 230;
+  --primary-color-g: 106;
+  --primary-color-b: 37;
+  --link-color: #2c679b;
+
+  --light-primary-color: rgba(var(--primary-color-r), var(--primary-color-g), var(--primary-color-b), 0.2);
+
+  --input-border: var(--primary-color);
+  --input-focus-h: 21;
+  --input-focus-s: 79%;
+  --input-focus-l: 52%;
+
+  --border-width: 1px;
+  --border-radius: 8px;
+
+  --select-border: #777;
+  --select-focus: blue;
+  --select-arrow: var(--select-border);
 }
 
 body {
@@ -14,14 +37,14 @@ body {
  font-size: 16px;
  line-height: 1.6;
 
- color: #333;
+ color: var(--text-color);
  margin: 0px;
  margin-bottom: 20px;
  background-image: url(monkey.png);
  background-position: bottom left;
  background-repeat: no-repeat;
  background-attachment: fixed;
- background-color: #eee;
+ background-color: var(--background-color);
 }
 
 h1 {
@@ -276,6 +299,224 @@ form {
 #links li {
  display: inline;
  margin-bottom: 2px;
+}
+
+/* Button styling */
+.button {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  padding: 0;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+@media screen and (-ms-high-contrast: active) {
+  .button {
+    border: 2px solid currentcolor;
+  }
+}
+
+.button, input[type="file"]::file-selector-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  align-self: start;
+  background-color: var(--primary-color);
+  color: #fff;
+  border-radius: var(--border-radius);
+  padding: 0.25em 0.75em;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+  min-width: 10ch;
+  min-height: 36px;
+  text-align: center;
+  line-height: 1.1;
+  transition: 220ms all ease-in-out;
+}
+.button.min {
+  min-width: inherit;
+}
+.button.min:hover, .button:active, input[type="file"]::file-selector-button:hover {
+  text-decoration: underline;
+  background-color: #c05316;
+}
+a.button:link, a.button:visited {
+  color: #fff;
+}
+.button.small {
+  font-size: 0.85em;
+}
+.button.large {
+  font-size: 1.15em;
+}
+
+.button.outline {
+  background-color: #fff;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+}
+a.button.outline:link, a.button.outline:visited {
+  color: var(--primary-color);
+}
+.button[disabled] {
+  --primary-color: #ccc;
+
+  background-color: #eee;
+  color: #999;
+  cursor: not-allowed;
+}
+
+
+
+/* Form styling */
+.input, .fake-input {
+  font-size: 16px;
+  font-size: max(16px, 1em);
+  font-family: inherit;
+  padding: 0.25em 0.5em;
+  background-color: #fff;
+  border: var(--border-width) solid var(--input-border);
+  border-radius: var(--border-radius);
+  box-sizing: border-box;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+}
+
+.input:focus, .button:focus {
+  border-color: hsl(
+    var(--input-focus-h),
+    var(--input-focus-s),
+    var(--input-focus-l)
+  );
+  box-shadow: 0 0 0 3px
+    hsla(
+      var(--input-focus-h),
+      var(--input-focus-s),
+      calc(var(--input-focus-l) + 40%),
+      0.8
+    );
+  outline: 3px solid transparent;
+}
+
+.input:not(textarea) {
+  line-height: 1;
+  height: 2.25rem;
+}
+
+input[type="file"] {
+  font-size: 0.9em;
+  padding-top: 0.35rem;
+}
+
+textarea.input {
+  resize: vertical;
+}
+
+.input[readonly] {
+  border-style: dotted;
+  cursor: not-allowed;
+  color: #777;
+}
+
+.input[disabled] {
+  --input-border: #ccc;
+
+  background-color: #eee;
+  cursor: not-allowed;
+}
+
+label {
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 1;
+}
+
+label + .input, label + .select {
+  margin-bottom: 1rem;
+}
+
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  z-index: 1;
+  outline: none;
+}
+select::-ms-expand {
+  display: none;
+}
+
+.select {
+  display: grid;
+  grid-template-areas: "select";
+  align-items: center;
+  position: relative;
+  min-width: 15ch;
+  max-width: 30ch;
+  border: 1px solid var(--select-border);
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1.25rem;
+  cursor: pointer;
+  line-height: 1.1;
+  background-color: #fff;
+  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+}
+.select select, .select::after {
+  grid-area: select;
+}
+.select:not(.select--multiple)::after {
+  content: "";
+  justify-self: end;
+  width: 0.8em;
+  height: 0.5em;
+  background-color: var(--select-arrow);
+  -webkit-clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+          clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+}
+
+select:focus + .focus {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 2px solid var(--select-focus);
+  border-radius: inherit;
+}
+
+select[multiple] {
+  padding-right: 0;
+  /*
+   * Safari will not reveal an option
+   * unless the select height has room to
+   * show all of it
+   * Firefox and Chrome allow showing
+   * a partial option
+   */
+  height: 6rem;
+  /*
+   * Experimental - styling of selected options
+   * in the multiselect
+   * Not supported crossbrowser
+   */
+}
+select[multiple] option {
+  white-space: normal;
+  outline-color: var(--select-focus);
+}
+
+.select--disabled {
+  cursor: not-allowed;
+  background-color: #eee;
+  background-image: linear-gradient(to top, #ddd, #eee 33%);
 }
 
 @media print {
